--- a/ChatApp/Client/Pages/Index.razor
+++ b/ChatApp/Client/Pages/Index.razor
@@ -3,7 +3,7 @@
 @inject IJSRuntime JSRuntime
 @implements IAsyncDisposable
 
-<PageTitle>ChatApp</PageTitle>
+<PageTitle>Signal-ChatApp</PageTitle>
 <h3>ChatApp</h3>
 
 @if (!IsConnected)
