--- a/ChatApp/Client/Pages/Index.razor
+++ b/ChatApp/Client/Pages/Index.razor
@@ -4,7 +4,7 @@
 @implements IAsyncDisposable
 
 <PageTitle>Signal-ChatApp</PageTitle>
-<h3>ChatApp</h3>
+<h3>Signal-ChatApp</h3>
 
 @if (!IsConnected)
 {
