--- a/ChatApp/Client/Pages/Index.razor
+++ b/ChatApp/Client/Pages/Index.razor
@@ -3,8 +3,8 @@
 @inject IJSRuntime JSRuntime
 @implements IAsyncDisposable
 
-<PageTitle>Signal-ChatApp</PageTitle>
-<h3>Signal-ChatApp</h3>
+<PageTitle>ChatApp</PageTitle>
+<h3>ChatApp</h3>
 
 @if (!IsConnected)
 {
